// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nodeLibGenerator .eslintrc.json matches snapshot 1`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "node_modules",
  ],
  "overrides": [
    {
      "files": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "parserOptions": {
        "project": [
          "packages/node-lib/tsconfig.spec.json",
        ],
      },
    },
    {
      "excludedFiles": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "files": [
        "*.ts",
      ],
      "parserOptions": {
        "project": [
          "packages/node-lib/tsconfig.lib.json",
        ],
      },
    },
  ],
}
`;

exports[`nodeLibGenerator E2E project .eslintrc.json matches snapshot 1`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "node_modules",
  ],
  "overrides": [
    {
      "files": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "parserOptions": {
        "project": [
          "e2e/node-lib-e2e/tsconfig.spec.json",
        ],
      },
    },
    {
      "excludedFiles": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "files": [
        "*.ts",
      ],
      "parserOptions": {
        "project": [
          "e2e/node-lib-e2e/tsconfig.app.json",
        ],
      },
    },
  ],
}
`;

exports[`nodeLibGenerator E2E project jest.config.ts matches snapshot 1`] = `
"export default {
  displayName: "node-lib-e2e",
  preset: "../../jest.preset.js",
    globals: {
    "ts-jest": {
      tsconfig: "<rootDir>/tsconfig.spec.json",
    },
  },
      testEnvironment: "node",
    transform: {
        "^.+\\\\.[tj]s$": "ts-jest",
      },
    moduleFileExtensions: ["ts", "js", "html", "json"],
    coverageDirectory: "../../reports/coverage/packages/node-lib-e2e",
  reporters: [
    "default",
    [
      "jest-junit",
      {
        addFileAttribute: "true",
        classNameTemplate: "{suitename}",
        outputDirectory: "reports/junit",
        outputName: "node-lib-e2e.xml",
      },
    ],
  ],
};
"
`;

exports[`nodeLibGenerator E2E project project.json matches snapshot 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": [
    "node-lib",
  ],
  "name": "node-lib-e2e",
  "projectType": "application",
  "sourceRoot": "e2e/node-lib-e2e/src",
  "tags": [],
  "targets": {
    "build": {
      "configurations": {
        "development": {},
        "production": {},
      },
      "defaultConfiguration": "production",
      "executor": "@nx/webpack:webpack",
      "options": {
        "assets": [
          "e2e/node-lib-e2e/src/assets",
        ],
        "compiler": "tsc",
        "isolatedConfig": true,
        "main": "e2e/node-lib-e2e/src/main.ts",
        "outputPath": "dist/e2e/node-lib-e2e",
        "target": "node",
        "tsConfig": "e2e/node-lib-e2e/tsconfig.app.json",
        "webpackConfig": "e2e/node-lib-e2e/webpack.config.js",
      },
      "outputs": [
        "{options.outputPath}",
      ],
    },
    "e2e": {
      "configurations": {
        "ci": {
          "ci": true,
          "codeCoverage": true,
        },
      },
      "dependsOn": [
        {
          "projects": "self",
          "target": "install",
        },
      ],
      "executor": "@nx/jest:jest",
      "options": {
        "jestConfig": "e2e/node-lib-e2e/jest.config.ts",
        "passWithNoTests": true,
      },
      "outputs": [
        "reports/coverage/e2e/node-lib-e2e",
        "reports/junit/node-lib-e2e.xml",
      ],
    },
    "install": {
      "dependsOn": [
        {
          "projects": "dependencies",
          "target": "build",
        },
      ],
      "executor": "nx:run-commands",
      "options": {
        "commands": [
          "yarn cache clean --all",
          "yarn install",
        ],
        "cwd": "e2e/node-lib-e2e",
        "parallel": false,
      },
    },
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "e2e/node-lib-e2e",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`nodeLibGenerator E2E project tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "declaration": true,
    "types": [
      "node",
    ],
  },
  "exclude": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": [
    "**/*.ts",
  ],
}
`;

exports[`nodeLibGenerator E2E project tsconfig.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "lib": [
      "es2022",
    ],
    "module": "commonjs",
    "outDir": "../../dist/out-tsc",
    "target": "es2022",
  },
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`nodeLibGenerator E2E project tsconfig.spec.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "types": [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.d.ts",
    "test",
  ],
}
`;

exports[`nodeLibGenerator E2E project webpack.config.js webpack.config.js matches snapshot 1`] = `
"const { composePlugins, withNx} = require('@nx/webpack');

// Nx plugins for webpack.
module.exports = composePlugins(withNx(), (config) => {
  // Update the webpack config as needed here.
  // e.g. \`config.plugins.push(new MyPlugin())\`
  return config;
});
"
`;

exports[`nodeLibGenerator jest.config.ts matches snapshot 1`] = `
"export default {
  displayName: "node-lib",
  preset: "../../jest.preset.js",
    globals: {
    "ts-jest": {
      tsconfig: "<rootDir>/tsconfig.spec.json",
    },
  },
      testEnvironment: "node",
    transform: {
        "^.+\\\\.[tj]s$": "ts-jest",
      },
    moduleFileExtensions: ["ts", "js", "html", "json"],
    coverageDirectory: "../../reports/coverage/packages/node-lib",
  reporters: [
    "default",
    [
      "jest-junit",
      {
        addFileAttribute: "true",
        classNameTemplate: "{suitename}",
        outputDirectory: "reports/junit",
        outputName: "node-lib.xml",
      },
    ],
  ],
};
"
`;

exports[`nodeLibGenerator project.json matches snapshot 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "node-lib",
  "projectType": "library",
  "sourceRoot": "packages/node-lib/src",
  "tags": [],
  "targets": {
    "build": {
      "executor": "@nx/js:tsc",
      "options": {
        "assets": [
          "packages/node-lib/*.md",
        ],
        "main": "packages/node-lib/src/index.ts",
        "outputPath": "dist/packages/node-lib",
        "packageJson": "packages/node-lib/package.json",
        "tsConfig": "packages/node-lib/tsconfig.lib.json",
      },
      "outputs": [
        "{options.outputPath}",
      ],
    },
    "deploy": {
      "configurations": {
        "development": {
          "dryRun": true,
        },
        "production": {
          "dryRun": false,
        },
      },
      "defaultConfiguration": "development",
      "dependsOn": [
        {
          "projects": "self",
          "target": "build",
        },
      ],
      "executor": "@chiubaka/nx-plugin:npm-publish",
      "options": {
        "packagePath": "dist/packages/node-lib",
      },
    },
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "packages/node-lib",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
    "publish": {
      "command": "node tools/scripts/publish.mjs node-lib {args.ver} {args.tag}",
      "dependsOn": [
        "build",
      ],
    },
    "test": {
      "configurations": {
        "ci": {
          "ci": true,
          "codeCoverage": true,
        },
      },
      "executor": "@nx/jest:jest",
      "options": {
        "jestConfig": "packages/node-lib/jest.config.ts",
        "passWithNoTests": true,
      },
      "outputs": [
        "reports/coverage/packages/node-lib",
        "reports/junit/node-lib.xml",
      ],
    },
  },
}
`;

exports[`nodeLibGenerator tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "declaration": true,
    "types": [
      "node",
    ],
  },
  "exclude": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": [
    "**/*.ts",
  ],
}
`;

exports[`nodeLibGenerator tsconfig.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "lib": [
      "es2022",
    ],
    "module": "commonjs",
    "outDir": "../../dist/out-tsc",
    "target": "es2022",
  },
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`nodeLibGenerator tsconfig.spec.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "types": [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.d.ts",
    "test",
  ],
}
`;
